# Mirage-Tactical

./: .env.example  .gitignore  AlBarqHubClient.kt  BaseActivity.kt  BaseActivity.kt - الإصدار النهائي مع WebView + Remote Config  LanguageSelectionScreen.kt  LocaleHelper.kt  MIRAGE_AUTONOMOUS_PROTOCOLS.md  MIRAGE_BUILD_COMMAND.sh  MIRAGE_DEPLOYMENT_MATRIX.md  MIRAGE_MASTER_CORE_LOGIC.md  MIRAGE_OODA_ROADMAP.md  MIRAGE_SOVEREIGN_ARCHIVE.md  MIRAGE_STATUS_REPORT.md  MIRAGE_UFO_ALBARQ_MASTER_DOC.md  Mirage-Build-Guide.md  MirageSentinel.kt  MirageSettingsSheet.kt  Mirage_AI_Logic.yaml  README.md  SamuraiAiPanel.kt  SettingsScreen.kt  SettingsViewModel.kt  SpeedTestManager.kt  UFOAlbarqVpnService.kt  VpnConfig.kt  VpnConnectScreen.kt  VpnRepository.kt  VpnViewModel.kt  ai_studio_code (5).sh  auth.html  cloudbuild.yaml  complete_system.py  control-panel.js  core_engine.py  cosmicApp.js  create_full_promo.py.  dashboard.html  deploy_mirage.sh  deploy_xray.sh  (+25 more)
Mirage-Backend/: .env.example  requirements.txt
android-architecture/: CleanArchitectureConcepts.kt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/Lib/: pubspec.yaml
app/src/main/cpp/: CMakeLists.txt  mirage-engine.cpp  mirage_security.cpp  native-lib.cpp
app/src/main/java/com/Mirage Tactical/workflow/: DeploymentWorkflow.java
app/src/main/java/com/example/miragetactical/: MirageTacticalActivity.java
app/src/main/java/com/mirage/ufovpn/ui/theme/: Spacing.kt
app/src/main/kotlin/com/mirage/vpn/: MainActivity.kt  PortalEngine.kt  SecurityProvider.kt
app/src/main/kotlin/com/mirage/vpn/core/: AdminSecurity.kt  ExecutiveDirectorAI.kt  MirageAIExecutive.kt  MirageSentinel.kt  MirageTracker.kt  MirageVpnService.kt  NativeEngine.kt  PortalEngine.kt  SecurityProvider.kt
app/src/main/kotlin/com/mirage/vpn/core/network/: FirewallApiClient.kt
app/src/main/kotlin/com/mirage/vpn/ui/: EmeraldSamuraiScreen.kt  MirageDashboardScreen.kt  MirageDraftsScreen.kt  MirageErrorBoundary.kt  MirageKatanaAdminScreen.kt  MirageModernUI.kt  MirageOnboardingScreen.kt  MiragePortalScreen.kt  MirageProfileScreen.kt  MirageTheme.kt  PreFlightProtocolScreen.kt  SettingsScreen.kt  VpnViewModel.kt
app/src/main/res/layout/: activity_miragetactical.xml
assets/: secure_routes.json
backend/: Dockerfile  main.py  mirage_crypto.py  requirements.txt
configs/: ai-integrators.yml  global-config.yml  monitoring-config.yml  secrets-management.yml  servers-config.yml
exports/android/core/: AppErrorBoundary.kt  AutoUpdateManager.kt  CMakeLists.txt  EmergencyConfigBuilder.kt  LanguageViewModel.kt  MirageAccessGate.kt  MirageAiManager.kt  MirageBillingManager.kt  MirageCloudRouter.kt  MirageCore.kt  MirageCoreConfig.kt  MirageCoreNative.kt  MirageDashboardViewModel.kt  MirageExecutiveEngine.kt  MirageFinanceCore.kt  MirageGameController.kt  MirageGlobalBridge.kt  MirageIdentityManager.kt  MirageNotificationManager.kt  MiragePingManager.kt  MirageSanitizer.kt  MirageSystemGuardian.kt  MirageViewController.kt  MirageVpnService.kt  NativeLoader.kt  PortalEngine.kt  SatelliteEmergencyManager.kt  SecurityProvider.kt  SentinelObserver.kt  Server.kt  ServerViewModel.kt  SmartKillSwitch.kt  VpnConfigBuilder.kt  VpnViewModel.kt  XrayVpnService.kt
exports/android/core/config/: XrayConfigGenerator.kt
exports/android/core/jni/: native-lib.cpp
exports/android/core/network/: ConfigFetcher.kt  GitHubClient.kt  GitHubModernService.kt  ModernGitHubRepository.kt
functions/: index.js
infrastructure/: main.tf  setup_nodes.sh
lib/: main.dart
protocols/: ProtocolHandoffManager.kt  secure_routes.json  xray_handoff_config.json
public/: sw.js  translations.json
scripts/: mirage_alpha_test.py  mirage_phantom_protocol.py  zip_project.js
src/: AdminDashboard.tsx  AiSentinel.tsx  App.tsx  ClientPortal.tsx  CloudDashboard.tsx  ErrorBoundary.tsx  FinanceCenter.tsx  FloatingGold.tsx  GlobalOrb.tsx  MiragePanel.tsx  MirageStyle.css  OodaCommandCenter.tsx  app.css  (+7 more)
(+104 files in other folders)
